nsx-demo-type-loadbalancer.yaml
# This creates the K8s Service
apiVersion: v1
kind: Service
metadata:
  name: nsx-demo
  labels:
    app: mod2
spec:
  ports:
    # the port that this service should serve on
    - port: 80
      targetPort: 80
      protocol: tcp
      name: nsx-demo
  selector:
    app: nsx-demo
  type: LoadBalancer
